--- a/Module 1/1.3 Strings, Numbers, Bools, Lists, Tuples, Dictionaries.ipynb
+++ b/Module 1/1.3 Strings, Numbers, Bools, Lists, Tuples, Dictionaries.ipynb
@@ -99,8 +99,9 @@
    ],
    "source": [
     "# we can access individual parts of a string with square brackets\n",
-    "print(x[10])\n",
-    "print(x[4:20]) # more on this when we talk about lists"
+    "x = \"Argentina won the world cup\"\n",
+    "print(x[8])\n",
+    "print(x[0:9]) # more on this when we talk about lists"
    ]
   },
   {
@@ -223,7 +224,9 @@
     "2. `replace` -> will replace occurances of text in a string\n",
     "3. `strip` -> removes whitespace from ends of strings\n",
     "4. `lower` -> turns the string to lower case\n",
-    "5. `upper` -> turns the string to upper case\n"
+    "5. `upper` -> turns the string to upper case\n",
+    "\n",
+    "Here's a couple examples:"
    ]
   },
   {
@@ -266,44 +269,6 @@
     "\n",
     "# Lets replace the word John with Dave\n",
     "print(txt.replace('John', 'Dave'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "895c52ee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         Hello my name is John\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Lets remove whitespace\n",
-    "txt = \"         Hello my name is John\"\n",
-    "print(txt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "7bc32d4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello my name is John\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(txt.strip()) # removed whitespace"
    ]
   },
   {
