--- a/Module 3/3.4 Sofascore.ipynb
+++ b/Module 3/3.4 Sofascore.ipynb
@@ -22,30 +22,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2dafceb63f7e3ea",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-02-26T13:49:39.670174Z",
-     "start_time": "2024-02-26T13:49:39.577096Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "7136dba2d9f1e4d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-26T13:55:51.688342Z",
-     "start_time": "2024-02-26T13:55:51.684140Z"
+     "end_time": "2024-04-22T17:19:17.190497Z",
+     "start_time": "2024-04-22T17:19:17.180541Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -63,174 +44,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3cc779e4dcf087a5",
+   "execution_count": 2,
+   "id": "d540694aa627d381",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-26T13:55:52.599186Z",
-     "start_time": "2024-02-26T13:55:52.426011Z"
+     "end_time": "2024-04-22T17:19:18.498832Z",
+     "start_time": "2024-04-22T17:19:18.238673Z"
     },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 20821  100 20821    0     0  70731      0 --:--:-- --:--:-- --:--:-- 71549\n"
+     ]
+    }
+   ],
    "source": [
-    "# Open the network tab in the developer tools and filter by XHR to find the API call that loads the data\n",
-    "# Then look for an api call that is called \"shotmap\"\n",
-    "# Copy the cURL command and head over to curlconverter.com and paste the cURL command to get the python requests code\n",
-    "headers = {\n",
-    "    'authority': 'api.sofascore.com',\n",
-    "    'accept': '*/*',\n",
-    "    'accept-language': 'en-US,en;q=0.9',\n",
-    "    'cache-control': 'max-age=0',\n",
-    "    'dnt': '1',\n",
-    "    'if-none-match': 'W/\"c8379b88a8\"',\n",
-    "    'origin': 'https://www.sofascore.com',\n",
-    "    'referer': 'https://www.sofascore.com/',\n",
-    "    'sec-ch-ua': '\"Chromium\";v=\"121\", \"Not A(Brand\";v=\"99\"',\n",
-    "    'sec-ch-ua-mobile': '?0',\n",
-    "    'sec-ch-ua-platform': '\"macOS\"',\n",
-    "    'sec-fetch-dest': 'empty',\n",
-    "    'sec-fetch-mode': 'cors',\n",
-    "    'sec-fetch-site': 'same-site',\n",
-    "    'user-agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36',\n",
-    "}\n",
+    "import json\n",
+    "import os\n",
     "\n",
-    "response = requests.get(f'https://api.sofascore.com/api/v1/event/{match_id}/shotmap', headers=headers) # replace the id with the id of the match"
+    "# execute a curl command to get the data\n",
+    "result = json.loads(os.popen( \n",
+    "  f'curl -H \"Host: api.sofascore.com\" -H \"Accept: */*\" -H \"User-Agent: curl/8.1.2\" https://api.sofascore.com/api/v1/event/{match_id}/shotmap'\n",
+    ").read())['shotmap']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "bd301cca42618571",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-02-26T13:57:43.407746Z",
-     "start_time": "2024-02-26T13:57:43.405111Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "304"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The first time you run this you get a 304 status code, which means the data is cached and the response is not updated\n",
-    "response.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "4d3ad2281f89fbde",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-02-26T13:57:55.434134Z",
-     "start_time": "2024-02-26T13:57:55.430375Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# We can add the 'last-modified' header to the request to get the data\n",
-    "# You can just hardcode todays date, or you can dynamically get the date and time\n",
-    "# I've never had a problem hardcoding the date\n",
-    "headers['If-Modified-Since'] = 'Mon, 26 Feb 2024 00:00:00 GMT'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "b2db9f17dad47cd9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-02-26T13:57:58.646718Z",
-     "start_time": "2024-02-26T13:57:58.492583Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "response = requests.get(f'https://api.sofascore.com/api/v1/event/{match_id}/shotmap', headers=headers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b9108d8b4eafa98e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-02-26T13:58:00.001189Z",
-     "start_time": "2024-02-26T13:57:59.997054Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "a6d5b9eb0ba12165",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-02-26T13:58:53.249963Z",
-     "start_time": "2024-02-26T13:58:53.247291Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Now turn it into a json object\n",
-    "data = response.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "995651094e7d4fa0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-26T13:59:17.063330Z",
-     "start_time": "2024-02-26T13:59:16.610830Z"
+     "end_time": "2024-04-22T17:19:20.628280Z",
+     "start_time": "2024-04-22T17:19:20.104985Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -241,17 +95,17 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame(data['shotmap'])"
+    "df = pd.DataFrame(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "87037e9c2327dadd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-26T14:00:04.840373Z",
-     "start_time": "2024-02-26T14:00:04.831106Z"
+     "end_time": "2024-04-22T17:19:20.646242Z",
+     "start_time": "2024-04-22T17:19:20.632044Z"
     },
     "collapsed": false,
     "jupyter": {
@@ -589,7 +443,7 @@
        "9                       1514         shot      NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
